# motorcycle_mpc

./: .gitignore  LICENSE  README.md  pyproject.toml
model/: bicycle.urdf  plane.urdf
model/meshes/: fork.stl  handlebar.dae  handlebar_centered.stl  link_handle.stl  link_handle_centered.stl  link_wheel.stl  link_wheel_centered.stl  main_frame.dae  main_frame_centered.stl  saddle.stl  saddle_centered.stl  wheel.stl  wheel_centered.stl  wheel_full_centered.stl
src/: path_generate.py
src/env/: path_track_env.py
src/pathTrack/: Bicycle.py  MPC.py  cubic_spline_planner.py  pathTrack.py  reference_trajectory.py
src/pathTrack/config/: config.py
